--- a/uv.html
+++ b/uv.html
@@ -51,15 +51,20 @@
     <section class="unidade-uv" style="background-image: url('img/backcinza.jpg!d');">
         <div class="container">
             <div class="unidade-uv-text" >
-                <h3>Unidade de Destilação e Unidade de Destilação a Vácuo</h3><br>
-                <p>Apresentamos o escopo completo das paradas das unidades UV/UVV. 
+                <h3><center>Unidade de Destilação e Unidade de Destilação a Vácuo</center></h3><br>
+                <p><strong><center>Apresentamos os principais serviços realizados nas paradas das unidades UV/UVV. 
                    Nossos serviços são realizados com excelência, alta qualidade e acima de tudo, 
-                   com o máximo compromisso com a segurança.</p><br>
+                   com o máximo compromisso com a segurança.</center></strong></p><br>
                 <ul></ul>
                  
             </div>
             <div class="unidade-uv-img">
                 <img src="img/Mídia (18).jpg" alt="elos">
+                <img src="img/Mídia (16).jpg" alt="">
+                <img src="img/Mídia (21).jpg" alt="">
+                <img src="img/Mídia (14).jpg" alt="">
+                <img src="img/2601.jpg" alt="">
+                <img src="img/Mídia (11).jpg" alt="">
             </div>
         </div>
     </section>
