--- a/5126-01.html
+++ b/5126-01.html
@@ -9,7 +9,7 @@
     <title>V-5126-01</title>
 </head>
 <body>
-    <header style="background-image: url('img/5126-01\ att3.jpg')">
+    <header style="background-image: url('img/5126pintado3.jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
@@ -81,6 +81,9 @@
                 <img src="img/5126-01 att2.jpg" alt="">
                 <img src="img/5126-01 att3.jpg" alt="">
                 <img src="img/5126-01 att4.jpg" alt="">
+                <img src="img/5126pintado3.jpg" alt="">
+                <img src="img/5126pintado2.jpg" alt="">
+                <img src="img/5126pintado1.jpg" alt="">
             </div>
             <div class="unidade-uv-text">
                 <right><h3>V-5126-01</h3>
