--- a/vasosut.html
+++ b/vasosut.html
@@ -9,7 +9,7 @@
     <title>Vasos UT-1</title>
 </head>
 <body>
-    <header style="background-image: url('img/V-5126-01\ \(6\).jpg')">
+    <header style="background-image: url('img/5126pintado4.jpg')">
         <div class="container">
             <nav>
                 <a href="elos.html">
@@ -82,6 +82,9 @@
                 <img src="img/5126-01 att2.jpg" alt="">
                 <img src="img/5126-01 att3.jpg" alt="">
                 <img src="img/5126-01 att4.jpg" alt="">
+                <img src="img/5126pintado3.jpg" alt="">
+                <img src="img/5126pintado2.jpg" alt="">
+                <img src="img/5126pintado1.jpg" alt="">
             </div>
             <div class="unidade-uv-text">
                 <right><h3>V-5126-01</h3>
