--- a/UT-1.html
+++ b/UT-1.html
@@ -51,6 +51,7 @@
                 <img src="img/bateria trocadores de alta.jpg" alt="">
                 <img src="img/trocador de alta 03.jpg" alt="">
                 <img src="img/trocadores de alta .jpg" alt="">
+                <img src="img/bateria alta pintada.jpg" alt="">
                 <img src="img/cupula.jpeg" alt="">
                 <img src="img/Mídia (8).jpg" alt="">
                 <img src="img/HDT.jpg" alt="">
