--- a/elos.html
+++ b/elos.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="parada-rpbc-text">
                     <h3><center>FAMILIA ELOS</center></h3><br>
-                    <p><center><ol><strong>Mais uma parada concluida com sucesso, Um evento realizado 
+                    <p><center><ol><strong>Mais uma parada concluida com sucesso. Um evento realizado 
                         com muito trabalho esfoço e dedicação de todos.<br>
                         <br>"Não existe maior motivação para realizar um bom trabalho do que sentir paixão
                         pelo que faz."<br>
